Setting up testing configurations and files [sf2-starter-edition]

--- a/behat.yml
+++ b/behat.yml
@@ -8,7 +8,7 @@ default:
     suites:
         web:
             contexts:
-                - FeatureContext
+                - Resources\Behat\WebContext
 
     extensions:
         Behat\MinkExtension:
