--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ addons:
 php:
   - 5.5
   - 5.6
+cache:
+  directories:
+    - vendor
+    - bin
 before_script:
   - sudo apt-get update
   - sudo apt-get install apache2 libapache2-mod-fastcgi
@@ -38,11 +42,15 @@ before_script:
   - cp etc/travis-ci/web/app_test.php web/app_test.php
   - cp etc/travis-ci/web/.htaccess web/.htaccess
   - cp etc/travis-ci/behat.yml behat.yml
+
   - composer install
   - php app/console assetic:dump --env=prod --no-debug
   - cp etc/travis-ci/app/config/parameters.yml app/config/parameters.yml
+  - php app/console doctrine:database:create --env=dev
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:migrations:migrate --env=test --no-interaction
+  - php app/console doctrine:fixtures:load --env=test --no-interaction
+  - php app/console assetic:dump --env=prod --no-debug
 
 script:
   - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/xdebug.ini
