--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,7 @@ dependencies:
     - sudo cp etc/ci/www.test.ci /etc/apache2/sites-available
     - sudo a2ensite www.test.ci
     - sudo a2enmod ssl
+    - sudo a2enmod rewrite
     - sudo service apache2 restart
     - cp etc/ci/app/config/parameters.yml app/config/parameters.yml
     - cp etc/ci/web/app_test.php web/app_test.php
@@ -51,3 +52,4 @@ test:
     - ./bin/php-cs-fixer fix src/ --dry-run --diff --level=symfony --fixers=short_array_syntax,align_double_arrow,align_equals,no_blank_lines_before_namespace,ordered_use,phpdoc_order,-unused_use,-empty_return
     - ./bin/coveralls
     - ./bin/test-reporter
+
