--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -2,7 +2,7 @@ imports:
     - { resource: config_dev.yml }
 
 parameters:
-    database_name: project_name_test
+    database_name: devboardxyz_test
     doctrine.dbal.connection_factory.class: Liuggio\Fastest\Doctrine\DBAL\ConnectionFactory
 
 framework:
