--- a/behat.yml
+++ b/behat.yml
@@ -12,7 +12,7 @@ default:
 
     extensions:
         Behat\MinkExtension:
-            base_url: http://test.project_name.loc/
+            base_url: http://www.devboardxyz.loc/app_test.php/
             sessions:
                 default:
                     symfony2: ~
