--- a/etc/ci/behat.yml
+++ b/etc/ci/behat.yml
@@ -9,6 +9,7 @@ default:
         web:
             contexts:
                 - Resources\Behat\WebContext
+                - UserContext
 
     extensions:
         Behat\MinkExtension:
