TEMP: link to github

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,6 +38,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        github_client_id: %github_client_id%
 
 # Assetic Configuration
 assetic:
