--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,7 @@ imports:
     - { resource: services.yml }
     - { resource: main/doctrine-migrations.yml }
     - { resource: main/fos-user.yml }
+    - { resource: main/hwi-oauth.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
