--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -20,3 +20,7 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    # Github connect data
+    github_client_id:  "FAKE-GITHUB-ID"
+    github_client_secret:  "FAKE-GITHUB-SECRET"
