--- a/src/NullDev/UserBundle/Resources/config/services.yml
+++ b/src/NullDev/UserBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
 #    null_dev_user.example:
 #        class: NullDev\UserBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+    my_user_provider:
+        class: NullDev\UserBundle\Security\Core\User\FOSUBUserProvider
+        #this is the place where the properties are passed to the UserProvider - see config.yml
+        arguments: [@fos_user.user_manager,{github: githubId}]
