--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+dev_board_github:
+    resource: "@DevBoardGithubBundle/Resources/config/routing.yml"
+    prefix:   /
+
 dev_board_core:
     resource: "@DevBoardCoreBundle/Resources/config/routing.yml"
     prefix:   /
