--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~1.3",
         "hwi/oauth-bundle": "0.4.*@dev",
-        "knplabs/github-api": "~1.4"
+        "knplabs/github-api": "~1.4",
+        "knplabs/knp-time-bundle": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle":                  "~2.3",
