--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,6 +40,7 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         github_client_id: %github_client_id%
+        github_default_scope: "user,read:org,repo"
 
 # Assetic Configuration
 assetic:
