--- a/circle.yml
+++ b/circle.yml
@@ -26,6 +26,7 @@ dependencies:
   post:
     - sudo setfacl -R -m u:www-data:rwx -m u:`whoami`:rwx  app/cache app/logs
     - sudo setfacl -dR -m u:www-data:rwx -m u:`whoami`:rwx app/cache app/logs
+    - php app/console doctrine:database:create --env=dev
     - php app/console doctrine:database:create --env=test
     #- php app/console doctrine:schema:update --env=test --force
     - php app/console doctrine:migrations:migrate --env=test --no-interaction
