--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -18,7 +18,7 @@ build:
       - 'cp etc/scrutinizer-ci/app/config/parameters.yml app/config/parameters.yml'
       - 'cp etc/scrutinizer-ci/web/app_test.php web/app_test.php'
       - 'cp etc/scrutinizer-ci/web/.htaccess web/.htaccess'
-      - 'cp etc/scrutinizer-ci/behat.yml behat.yml'
+      - 'cp etc/ci/behat.yml behat.yml'
     after:
       - php app/console doctrine:database:create --env=dev
       - php app/console doctrine:database:create --env=test
