--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,3 +24,7 @@ parameters:
     # Github connect data
     github_client_id:  "FAKE-GITHUB-ID"
     github_client_secret:  "FAKE-GITHUB-SECRET"
+    github_default_scope: "user,read:org,repo"
+    github_client_id_test:  "FAKE-GITHUB-ID-TEST"
+    github_client_secret_test:  "FAKE-GITHUB-SECRET-TEST"
+    github_default_scope_test: "user,read:org,repo"
