--- a/etc/ci/behat.yml
+++ b/etc/ci/behat.yml
@@ -39,12 +39,18 @@ default:
                 - DevBoard\Behat\Github\User\GithubUserContext
             filters:
                 tags: "@githubUser"
+        user:
+            contexts:
+                - DevBoard\Behat\NullDev\User\UserContext
+                - DevBoard\Behat\NullDev\User\FrontContext
+            filters:
+                tags: "@user"
         web:
             contexts:
                 - Resources\Behat\WebContext
-                - UserContext
+                - DevBoard\Behat\NullDev\User\UserContext
             filters:
-                tags: "~@project && ~@githubBranch && ~@githubCommit && ~@githubRepo && ~@githubUser"
+                tags: "~@project && ~@githubBranch && ~@githubCommit && ~@githubRepo && ~@githubUser && ~@user"
 
     extensions:
         Behat\MinkExtension:
