--- a/src/NullDev/UserBundle/Resources/config/routing.yml
+++ b/src/NullDev/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 null_dev_user_homepage:
     path:     /hello/{name}
     defaults: { _controller: NullDevUserBundle:Default:index }
+
+null_dev_user_connect_github:
+    path:     /connect/github
+    defaults: { _controller: NullDevUserBundle:Connect:github }
