--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -13,6 +13,10 @@ build:
         symfony_app:
           web_root: 'web/'
           host: 'www.test.ci'
+  cache:
+    directories:
+      - vendor
+      - bin
   dependencies:
     before:
       - 'cp etc/scrutinizer-ci/app/config/parameters.yml app/config/parameters.yml'
@@ -20,6 +24,8 @@ build:
       - 'cp etc/scrutinizer-ci/web/.htaccess web/.htaccess'
       - 'cp etc/ci/behat.yml behat.yml'
     after:
+      - sed -i "s/FAKE-GITHUB-ID-TEST/$GITHUB_ID/" app/config/parameters.yml
+      - sed -i "s/FAKE-GITHUB-SECRET-TEST/$GITHUB_SECRET/" app/config/parameters.yml
       - php app/console doctrine:database:create --env=dev
       - php app/console doctrine:database:create --env=test
       - 'php app/console doctrine:migrations:migrate --env=test --no-interaction'
