--- a/src/NullDev/GithubApiBundle/Resources/config/routing.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-null_dev_github_api_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: NullDevGithubApiBundle:Default:index }
+#null_dev_github_api_homepage:
+#    path:     /hello/{name}
+#    defaults: { _controller: NullDevGithubApiBundle:Default:index }
