--- a/src/NullDev/GithubApiBundle/Resources/config/services.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/services.yml
@@ -5,3 +5,8 @@ services:
 
     null_dev_github_api.client.authenticated.factory.token:
         class: NullDev\GithubApi\Client\Authenticated\TokenAuthenticatedClientFactory
+
+    null_dev_github_api.repo.service:
+        class: NullDev\GithubApi\Repo\RemoteGithubRepoService
+        arguments:
+          - @null_dev_github_api.client.authenticated.factory.token
