--- a/src/NullDev/GithubApiBundle/Resources/config/services.yml
+++ b/src/NullDev/GithubApiBundle/Resources/config/services.yml
@@ -14,3 +14,13 @@ services:
         arguments:
           - @null_dev_github_api.client.authenticated.factory.token
           - @null_dev_github_api.repo.data.factory
+
+
+    null_dev_github_api.user.data.factory:
+        class: NullDev\GithubApi\User\GithubUserDataFactory
+
+    null_dev_github_api.user.service:
+        class: NullDev\GithubApi\User\RemoteGithubUserService
+        arguments:
+          - @null_dev_github_api.client.authenticated.factory.token
+          - @null_dev_github_api.user.data.factory
