--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -16,19 +16,14 @@ imports:
 monolog:
     channels: ["ghnotifictation"]
     handlers:
-        mail:
-            type:         fingers_crossed
-            # 500 errors are logged at the critical level
-            action_level: error
-            handler:      buffered
-        buffered:
-            type:    buffer
-            handler: swift
         main:
             type:         fingers_crossed
             action_level: error
-            handler:      nested
-        nested:
+            handler:      grouped
+        grouped:
+            type:    group
+            members: [streamed, buffered]
+        streamed:
             type:  stream
             path:  "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
@@ -39,6 +34,9 @@ monolog:
             path: "%kernel.logs_dir%/gh-notification.log"
             level: info
             channels: [ghnotifictation]
+        buffered:
+            type:    buffer
+            handler: swift
         swift:
             type:       swift_mailer
             from_email: error@devboard.xyz
